API 서버 구현하기 완성

--- a/app/src/views/index.ejs
+++ b/app/src/views/index.ejs
@@ -8,7 +8,7 @@
     <title>API 서버 개발 연습</title>
 </head>
 <body>
-    <input type="text" id="text">
+    <input type="text" id="number">
     <span id="result">0</span>
     <div>
     <button id="get-btn">조회</button>
